@@ -21,12 +21,10 @@ xpCost: 5
 
 # portal structure
 shapeInactive:
-## DUE A RECENT IMCOMPATIBILITY WITH 1.8.X I COULDNT SOLVE YET
-## I RECOMMEND ACTIVATION ITEM TORCH (ID 50) INSTEAD OF FIRE (ID 51)
-  center: [123, 50, 0, 49]
+  center: [49, 51, 0, 49]
   sides: [null, 49, 49]
 shapeActivate:
-  center: [124, 9, 9, 49]
+  center: [169, 9, 9, 49]
 
 
 # 
